# asterinas

./: AGENTS.md  Cargo.toml  DOCKER_IMAGE_VERSION  KATA_CI_DEBUG_LOG.md  KATA_CI_HANDOFF.md  KATA_VIRTIOFS_DEBUG.md  Makefile  README.md  sg_buf_migration_plan.md  test_full  test_full.c
.github/workflows/: benchmark_x86.yml  benchmark_x86_tdx.yml  publish_aster_nixos.yml  publish_asterinas_kata_image.yml  publish_release.yml  push_cachix_dev.yml  run_microvm_test_in_lastest_qemu.yml  test_12345.yml  test_asterinas_vsock.yml  test_iso_image.yml  test_kata_guest_os.yml  test_loongarch.yml  test_nixos.yml  test_nixos_full.yml  test_nixos_minimal.yml  test_riscv.yml  test_x86.yml  test_x86_tdx.yml
0301-review.md/0301-file-capability-invalid-bits/: review-fanout.md
0304-filemode-review/fragments/: development.json  maintainability.prompt  security.prompt
0304-rerun-review/0304-file-cap-setuid-root-effective/: review.md
0304-rerun2-review/0304-file-cap-setuid-root-effective/: review-fanout.md  review.md
0308-rerun-review/0308-signalfd-observer-filter-mask/: review.md
0308-review/0308-signalfd-observer-filter-mask/: review-fanout.md
distro/: aster_configuration.nix  configuration.nix
distro/modules/: core.nix
distro/overlays/: default.nix
kernel/: Cargo.toml
kernel/comps/block/: Cargo.toml
kernel/libs/aster-util/: Cargo.toml
kernel/libs/aster-util/src/: lib.rs  read_cstring.rs  sg_buf.rs
kernel/src/: context.rs  error.rs  (+2 more)
osdk/: Cargo.toml
ostd/: Cargo.toml
rewiew_history/: README.md  recall-verify.md
test/: Makefile
tools/: qemu_args.sh
(+346 files in other folders)
