[package]
name = "aster-block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.4"
ostd = { path = "../../../ostd" }
align_ext = "0.1.1"
int-to-c-enum = "0.1.1"
component = { path = "../../libs/comp-sys/component" }
log = "0.4"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }

[lints]
workspace = true
